fixing overlapping hero controllers

--- a/app/styles/partials/components.scss
+++ b/app/styles/partials/components.scss
@@ -61,7 +61,9 @@
   }
 
   .container {
-    /*width: 80%;*/
+    @media only screen and (max-width: 1320px) {
+      width: 80%;
+    }
 
     @media screen and (max-width: $desktop-small) {
       width: inherit;
